--- a/scss/partials/_home.scss
+++ b/scss/partials/_home.scss
@@ -157,6 +157,55 @@ body{
         }
     }
 }
+//parallax
+#home-parallax{
+    height: 454px;
+    background-image: url(../img/home/home-parallax/home-parallax-img.jpg);
+    margin-bottom: 130px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    &::before{
+        position: absolute;
+        content: "";
+        background: #232323;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        z-index: 1;
+        opacity: 0.6;
+    }
+    .parallax-items{
+        position: absolute;
+        z-index: 2;
+        color: white;
+        margin-top: 50%;
+        // display: flex;
+        // justify-content: space-between;
+        left: 25%;
+        
+
+        i{
+            font-size: 60px;
+            margin: 20px 0;
+        }
+        h3{
+            margin: 20px 0;
+
+        }
+        span{
+            margin: 20px 0;
+            font-family: $font-f;
+            color: rgba(255, 255, 255, 0.692);
+        }
+    }
+
+}
+
+//parallax
 
 
 
