--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,4 +5,6 @@
 @import "./partials/digital";
 @import "./partials/collective";
 @import "./partials/extend";
-
+@import "./partials/expertise";
+@import "./partials/news";
+@import "./partials/carousel";
