--- a/scss/style.css
+++ b/scss/style.css
@@ -175,6 +175,52 @@ body {
   transition: 0.5s;
 }
 
+#home-parallax {
+  height: 454px;
+  background-image: url(../img/home/home-parallax/home-parallax-img.jpg);
+  margin-bottom: 130px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+#home-parallax::before {
+  position: absolute;
+  content: "";
+  background: #232323;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  opacity: 0.6;
+}
+
+#home-parallax .parallax-items {
+  position: absolute;
+  z-index: 2;
+  color: white;
+  margin-top: 50%;
+  left: 25%;
+}
+
+#home-parallax .parallax-items i {
+  font-size: 60px;
+  margin: 20px 0;
+}
+
+#home-parallax .parallax-items h3 {
+  margin: 20px 0;
+}
+
+#home-parallax .parallax-items span {
+  margin: 20px 0;
+  font-family: "Lora", serif;
+  color: rgba(255, 255, 255, 0.692);
+}
+
 .popup {
   width: 100%;
   height: 100%;
@@ -373,8 +419,8 @@ body {
   overflow: hidden;
   width: 0;
   height: 100%;
-  -webkit-transition: .5s ease;
-  transition: .5s ease;
+  -webkit-transition: 0.5s ease-out;
+  transition: 0.5s ease-out;
 }
 
 .team-hover h6 {
@@ -400,16 +446,227 @@ body {
   white-space: nowrap;
 }
 
-#collective h3 {
+#collective h3, .expertise h3 {
   font-size: 32px;
   font-family: sans-serif;
   font-weight: bold;
   margin-bottom: 26px;
 }
 
-#collective p {
+#collective p, .expertise .lead, .new-lead {
   font-size: 23px;
   font-family: "Lora", serif;
   color: #767676;
+}
+
+.expertise {
+  margin-bottom: 100px;
+}
+
+.expertise .text-p {
+  max-width: 55%;
+  margin-left: 23%;
+}
+
+.expertise-info {
+  margin-bottom: 130px;
+}
+
+.expertise-info .interface {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 52px;
+}
+
+.expertise-info .interface .left {
+  margin: 0 26px 0 0;
+}
+
+.expertise-info .interface .left i {
+  color: #425cbb;
+  line-height: 1em;
+  font-size: 2.8125em;
+}
+
+.expertise-info .interface .right {
+  color: #767676;
+  width: 400px;
+}
+
+.expertise-info .interface .right h6 {
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 250;
+  margin-bottom: 28px;
+  font-size: 12px;
+}
+
+.expertise-info .interface .right p {
+  margin: 0 0 26px;
+}
+
+.container-fluid.dangibson {
+  padding: 0 !important;
+}
+
+.dangibson {
+  position: relative;
+  height: 474px;
+  width: 100%;
+  left: 0;
+  right: 0;
+}
+
+.dangibson::before {
+  position: absolute;
+  content: '';
+  width: 100%;
+  background: #f4f4f4;
+  bottom: 0em;
+  top: 82px;
+}
+
+.dgcol {
+  padding: 0;
+  margin: 0;
+}
+
+.dan-gibson-img img {
+  height: 473px;
+  width: 555px;
+  margin-left: 100px;
+}
+
+.dan-gibson-info {
+  margin-top: 182px;
+  width: 85%;
+}
+
+.dan-gibson-info .blockquote p {
+  margin-bottom: 26px;
+  font-size: 23px;
+  line-height: 1.69565217391304em;
+  font-style: italic;
+  font-family: "Lora", serif;
+  color: #767676;
+}
+
+.dan-gibson-info .blockquote .blockquote-footer {
+  display: block;
+  font-size: 80%;
+  color: rgba(0, 0, 0, 0.747);
+  font-size: 16px !important;
+  font-weight: 700;
+}
+
+.dan-gibson-info h6 {
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 400;
+  font-size: 12px;
+  color: #767676;
+}
+
+.new-lead {
+  width: 733px;
+  margin-left: -60px;
+}
+
+.card-body {
+  padding: 26px !important;
+}
+
+.card-body .card-h6 {
+  font-size: 11px;
+  color: #767676;
+  margin: 0 0 13px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 400;
+}
+
+.card-body .card-h5 {
+  font-weight: 400;
+  margin: 0 0 26px;
+  height: 78px;
+}
+
+.card-body hr {
+  margin: 0 0 26px;
+}
+
+.card-body .card-text-lower .card-span {
+  font-size: 0.625em;
+  font-style: italic;
+  color: #767676;
+}
+
+.card-body .card-text-lower .card-h6-lower {
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 400;
+  display: inline-block;
+  margin: 0;
+  font-size: 10px;
+  color: #767676;
+}
+
+.card {
+  cursor: pointer;
+}
+
+.card:hover {
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+.view {
+  margin: 65px 0;
+  height: 103px;
+}
+
+.view .btn {
+  width: 200px;
+  height: 51px;
+  border-radius: 100px;
+  border: 1px solid #bbbbbb;
+  border-width: 2px;
+  font-size: inherit;
+  line-height: 10px;
+  text-transform: uppercase;
+}
+
+.view .btn:hover {
+  background: unset;
+  border: 1px solid black;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.view .btn span {
+  color: #343434;
+  border-color: #343434;
+  font-weight: 400;
+  font-size: 0.625em;
+}
+
+#owl-carousel {
+  height: 166px;
+  background: #F4F4F4;
+  margin-top: -10px;
+}
+
+#owl-carousel .item {
+  margin-top: 70px;
+  padding: 30px;
+}
+
+#owl-carousel .item img {
+  max-height: 1.625em;
+  opacity: .3;
+  margin: 0;
 }
 /*# sourceMappingURL=style.css.map */
