--- a/scss/partials/_home.scss
+++ b/scss/partials/_home.scss
@@ -207,6 +207,60 @@ body{
 
 //parallax
 
+// interested start
+
+.inter{
+
+    height: 183px;
+    background-color: #425cbb;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+  
+
+    .inter-items{
+        
+     
 
 
+        h4{
+            color: #ffff;
+            font-size: 23px;
+            display: inline;
+            font-weight: 500;
+            
+        }
 
+        .btn{
+            
+            background-color: #425cbb;
+            border-radius: 50px;
+            width: 188px;
+            height: 45px;
+            margin-left: 26px;
+            border: 1px solid rgba(155, 155, 155, 0.945);
+            &:hover{
+                border-color: white;
+                transition: 0.5s;
+            }
+            
+            
+
+            span{
+                
+                text-transform: uppercase;
+                font-size: 11px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                
+            }
+        }
+    }
+
+ 
+    
+
+ }
+// interested end
