--- a/scss/partials/_extend.scss
+++ b/scss/partials/_extend.scss
@@ -15,3 +15,12 @@
     font-family: $font-f;
     color: $text-color;
 }
+
+%h6-extend{
+    color: #f5f5f5;
+    margin: 0 0 24px;
+    font-size: 11px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 400;
+}
