--- a/scss/partials/_home.scss
+++ b/scss/partials/_home.scss
@@ -1,3 +1,5 @@
+
+
 .navbar {
     width: 100%;
     padding: 0px;
@@ -118,14 +120,42 @@
 body{
     background-color: #f8f8f8;
     overflow-x:hidden;
+
+    .col-lg-12{
+        padding:0;
+    }
 }
 
 .scrolled{
     top: 0;
-    transition: all 0.5s;
-    background-color: black !important;
-    color:gray !important;
+    height: 0;
+    overflow: hidden;
+    background: #f8f8f8 !important;
+    color:#232323 !important;
+    animation: navbar .5s ease forwards;
     box-shadow: 0px 0px 60px 0px rgba(0, 0, 0, 0.07) !important;
+    .nav-link{
+        color: #232323 !important;
+        &:hover{
+            color: rgb(161, 161, 161) !important;
+            transition: 0.5s;
+        }
+    
+    }
+    .search-icon, .bag-icon {
+        a{
+            color: #232323;
+            &:hover{
+                color: rgb(161, 161, 161) !important;
+                transition: 0.5s;
+            }
+        }
+    }
+
+   
+   
+
+
 }
 
 .video-btn{
@@ -161,7 +191,7 @@ body{
 #home-parallax{
     height: 454px;
     background-image: url(../img/home/home-parallax/home-parallax-img.jpg);
-    margin-bottom: 130px;
+    margin-bottom: 100px;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -182,7 +212,7 @@ body{
         position: absolute;
         z-index: 2;
         color: white;
-        margin-top: 50%;
+        margin-top: 30%;
         // display: flex;
         // justify-content: space-between;
         left: 25%;
@@ -264,3 +294,9 @@ body{
 
  }
 // interested end
+
+
+@keyframes navbar{
+    from{height: 0px;}
+    to{height: 65px;}
+}
