--- a/scss/partials/_popup.scss
+++ b/scss/partials/_popup.scss
@@ -12,19 +12,32 @@
     .searchicon{
         display: inline-block;
         position: fixed;
-        top: 53%;
+        top: 38%;
         left: 28%;
-        color: red;
+        color: rgba(255,255,255, 0.3);
         z-index: 33;
+        font-size: 25px;
     }
     .input-search{
-        width: 50%;
-        border: solid 1px;
-        display: inline-block;
+        height: 8%;
+        width: 52%;
+        border: none;
+        border-radius: 50px;
+        display: inline-block;  
         position: fixed;
-        top: 50%;
+        top: 36%;
         left: 27%;
         padding: 10px 42px;
+        background: rgba(255,255,255, 0.3);
+        color: rgba(255, 255, 255, 0.76);
+        font-size: 16px;
+        font-weight: bold;
+        &:focus{
+            outline: none;
+        }
+        &::placeholder{
+            color: rgba(255, 255, 255, 0.315);
+        }
     }
 }
 
@@ -41,4 +54,52 @@
 
 // popup search end
 
+.popup-basket{
+
+    max-height: 100%;
+    background: #fff;
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 0%;
+    z-index: 9999;
+    
+ 
+    
+
+
+    .basketHead{
+        display: flex;
+        justify-content: space-between;
+        padding: 22px;
+
+        .basket-close{
+            i{
+                border: 1px solid black;
+                border-radius: 50%;
+                background-color: #232323;
+                color: red;
+                padding: 6px;
+            }
+        }
+        
+        h5{
+            font-family: $font-f;
+            font-size: 16px;
+            font-weight: 700;
+            color: #343434;
+        }
+    }
+   
+
+}
+
+
 // popup basket start
+  @keyframes not{
+      from{width: 0;}
+
+
+      to{width: 30%;}
+  }
